--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^2.2.33",
-    "vuex": "^3.5.1"
+    "vuetify": "^2.2.33"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
